deployments/anakonda/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anakonda
  labels:
     app.kubernetes.io/name: anakonda
     app.kubernetes.io/part-of: anakonda
     app.kubernetes.io/project: anakonda
     app.kubernetes.io/env: test
spec:
   type: ClusterIP
   selector:
      app.kubernetes.io/name: anakonda
      app.kubernetes.io/part-of: anakonda
      app.kubernetes.io/project: anakonda
      app.kubernetes.io/env: test
   ports:
     - name: http
       port: 80
       targetPort: 8080
